--- a/package.json
+++ b/package.json
@@ -4,12 +4,26 @@
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chat-elements": "^12.0.10",
+    "react-dom": "^18.2.0",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
