--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^18.2.0",
     "react-chat-elements": "^12.0.10",
     "react-dom": "^18.2.0",
-    "react-youtube": "^10.1.0"
+    "react-use-websocket": "^3.0.0",
+    "react-youtube": "^10.1.0",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "react-scripts": "5.0.1"
